# WattleOS

./: Cargo.toml  README.md  build.rs  buildiso.sh
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml
kernel/src/: allocator.rs  logger.rs  main.rs  memory.rs  shell.rs  size.rs
kernel/src/api/console/: helper.rs  mod.rs  palette.rs
kernel/src/cpu/: gdt.rs  interrupts.rs  mod.rs
kernel/src/io/: acpi.rs  keyboard.rs  mod.rs  serial.rs  x2apic.rs
kernel/src/io/screen/: font.rs  framebuffer.rs  mod.rs
kernel/src/io/screen/console/: mod.rs
kernel/src/io/vga/: framebuffer.rs  mod.rs
kernel/src/io/vga/font/: cozette.rs  mod.rs
kernel/src/programs/: mod.rs
kernel/src/programs/helloworld/: mod.rs
kernel/src/programs/shell/: mod.rs
kernel/src/task/: executor.rs  mod.rs  simple_executor.rs
src/: main.rs
