[package]
name = "os"         # or any other name
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = {version = "0.11", git = "https://github.com/AarSeBail/bootloader.git"}
wattle_kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]